# lambda-machine

./: README.md  pyproject.toml
examples/let/: simple.lm
examples/module/: simple.lm
src/machine/: __init__.py  env.py
src/machine/ast/: __init__.py  ast.py  effect.py  error.py  list.py  pair.py  record.py  tag.py
src/machine/data/: tree.py
src/machine/parser/: __init__.py  grammar.lark  transformer.py
src/machine/testing/: examples.py
tests/: test_grammar.py
